bynkc/tests/fixtures/negative/12_return_type_mismatch/input.bynk
commons demo {
  fn bad(x: Int) -> Bool {
    x + 1
  }
}
